deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: pocky-server
  name: pocky-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pocky-server
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pocky-server
    spec:
      containers:
      - image: wngud1/pocky_server
        name: pocky-server
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: pocky-server
  name: pocky-server
spec:
  ports:
  - name: 5003-8080
    port: 5003
    protocol: TCP
    targetPort: 8080
    nodePort: 30012
  selector:
    app: pocky-server
  type: NodePort
status:
  loadBalancer: {}
