server2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service3
spec:
  selector:
    app: service3
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 8082
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service3-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service3
  template:
    metadata:
      labels:
        app: service3
    spec:
      containers:
      - name: service3
        image: wngud1/hoeng:0.1.3
        ports:
        - containerPort: 8082
