ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zkrp-ingress
  annotations:
    cert-manager.io/cluster-issuer: mont-prod
spec:
  ingressClassName: nginx
  rules:
  - host: zkrp.montkim.com
    http:
      paths:
      - path: /test1
        pathType: Prefix
        backend:
          service:
            name: spring-service
            port:
              number: 8080
      - path: /abc
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /test2
        pathType: Prefix
        backend:
          service:
            name: service2
            port:
              number: 8080
      - path: /test3
        pathType: Prefix
        backend:
          service:
            name: service3
            port:
              number: 8080

  tls:
  - hosts:
    - zkrp.montkim.com
    secretName: zkrp-tls
